distribution done