@@ -140,6 +140,25 @@
                     <commandlineArgs>--module-path ${javafx.runtime.path} --add-modules javafx.controls,javafx.fxml</commandlineArgs>
                 </configuration>
             </plugin>
+            
+            <!-- JLink Plugin for Custom Runtime -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>org.troy.capstone.uiMock.BasicUI</mainClass>
+                    <commandlineArgs>--add-modules javafx.controls,javafx.fxml</commandlineArgs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>org.troy.capstone.uiMock.BasicUI</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
